add Chiken bureger

--- a/ChickenBurger/ChickenBurger.html
+++ b/ChickenBurger/ChickenBurger.html
@@ -9,6 +9,7 @@
 <body>
     <hr size="3" noshade="0">
     <center><h1>Chicken Burger</h1></center>
+    <center><img src="index.jpeg" alt="ChickenBurger"></center>
     <hr size="3" noshade="0">
     <h3><u>Ingredients:</u></h3>
     <ol>
